--- a/latex_tutorial/intro.qmd
+++ b/latex_tutorial/intro.qmd
@@ -8,7 +8,7 @@ title: "Introduction to LaTeX"
 ::: 
 
 ::: {.callout-tip}
-Էս նյութը ծածկող [տեսադասը(ToDo)]()
+Էս նյութը ծածկող [տեսադասը](https://youtu.be/o_ldYAd8c70)
 ::: 
 
 # Resources:
