LaTeX - adds mail + Gform

--- a/latex_tutorial/intro.qmd
+++ b/latex_tutorial/intro.qmd
@@ -8,7 +8,9 @@ title: "Introduction to LaTeX"
 ::: 
 
 ::: {.callout-tip}
-Էս նյութը ծածկող [տեսադասը](https://youtu.be/o_ldYAd8c70)
+- Էս նյութը ծածկող 🎥[տեսադասը](https://youtu.be/o_ldYAd8c70)
+- Եթե ուզում եք միանալ մաթեմատիկայի նյութեր թվայնացնելուն լրացրեք [էս](https://forms.gle/bJWXE29SQ5KrD6tA7) google form-ը
+- TeX-ի օգնություն ստանալու համար գրեք `tex.spasarkum@gmail.com` հասցեին (կատակ չեմ անում, լուրջ ակտիվ մեյլ ա :))
 ::: 
 
 # Resources:
