Adds Armenian YT channels

--- a/index.qmd
+++ b/index.qmd
@@ -20,6 +20,9 @@ title: "Random"
 5. 3blue1brown - [3blue1brown հայերեն](https://www.youtube.com/@3blue1brown12)
 </details>
 
+- [Ուղեղամպրոպ](https://www.youtube.com/@UgheghAmprop)
+- [Բողկ](https://www.youtube.com/@%D5%A2%D5%B8%D5%B2%D5%AF)
+
 
 - Հայերեն ընտիր [վեբինարներ](https://www.youtube.com/watch?v=FUtc6NEtPWo) մի աշխարհ թեմաներով (Աշոտ Նաքաշյան)
 - Կոգնիտիվ հակումների մասին [կայք](https://keepsimple.io/hy/uxcore) նաև հայերենով ([գրառում](https://www.linkedin.com/feed/update/urn:li:activity:7319985758126104577/))
