--- a/index.qmd
+++ b/index.qmd
@@ -110,15 +110,40 @@ title: "Random"
 <details>
 <summary>Արշավ լիստ</summary>
 
-[] 1. Ջուր 1.5 լիտր
-[] 2. եթև, չաղի սնունդ (բրդուջ-մրդուջ, պոպոկ-մոպոկ, խնձոր-մնձոր, բանան-մանան)
-[] 3. Անձրևիկ
-[] 4. Արևապաշտպան կռեմ
-[] 5. Եթե լիճ կա՝ պլավկի, սրբիչ
+[x] 1. Ջուր 1.5 լիտր
+[x] 2. թեթև, չաղի սնունդ (բրդուջ-մրդուջ, պոպոկ-մոպոկ, խնձոր-մնձոր, բանան-մանան)
+[x] 3. Անձրևիկ
+[x] 4. Արևապաշտպան կռեմ
+[x] 5. Եթե լիճ կա՝ պլավկի, սրբիչ
 [] 6. Ֆանարիկ, սվիստոկ
 [] 7. Սանտավիկ, ադվիլ, պեռեկիսь
-[] 8. Նասկի
-[] 9. Գլխարկ
+[x] 8. Նասկի
+[x] 9. Գլխարկ
 [] 10. Արևային ակնող
 [] 11. Powerbank
+[] 12. Սեղանի խաղեր
+[x] 13. Օպտիկական ակնոց
+[x] 14. Շվեցարական
+</details>
+
+<details>
+<summary>Խաղեր</summary>
+
+- Մուուուուու
+- Զաժիգալկա (որ հարցնու ես ինչ-որ բան ու պետք ա ըտեղի մարդկանցից մեկին ընտրեն ու զաժիգալկան փոխանցեն ու տենց)
+- Այլ կերպ
+- երկու ճիշտ մեկ սուտ
+- Who am I?
+- Contact
+- Թղթի վրա գրել, նկարել իրար փոխանցելով (փչացած հեռախոսի կարգի)
+
+
+- Մաֆիա
+
+- Warewolf
+- Ռումմի Կուբ
+- Դաբբլս
+
+- Դիպլոմատ
+- Դուռակ
 </details>
